# precommit

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  dev-requirements.txt  license.txt  setup.cfg
.circleci/: config.yml
hooks/: check_codeowners.py  create_codeowners.py  util.py
tests/: test_check_codeowners.py  test_create_codeowners.py
