[options]
packages = find:
install_requires =
    flake8
    typing; python_version<"3.5"
python_requires = '>=3'

[options.entry_points]
console_scripts =
    check-codeowners = hooks.check_codeowners:main
    create-codeowners = hooks.create_codeowners:main

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True
